--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Twitter Player Card -->
     <meta name="twitter:card" content="player" />
     <meta name="twitter:player" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
     <meta name="twitter:player:width" content="480" />
@@ -8,11 +12,7 @@
     <meta name="twitter:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
     <meta name="twitter:player:stream" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
     <meta name="twitter:player:stream:content_type" content="video/mp4" />
-
-
-
-
-    <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ツイッタービデオカード作成ボット</title>
     <style>
