--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <meta name="twitter:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
     <meta name="twitter:player:stream" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
     <meta name="twitter:player:stream:content_type" content="video/mp4" />
-    
+    <meta name="twitter:title" content="動画プレイヤー" />
+    <meta name="twitter:description" content="このページはTwitter Player Card用です。" />
+
+    <!-- Open Graph Tags (必要) -->
+    <meta property="og:title" content="動画プレイヤー" />
+    <meta property="og:description" content="このページはTwitter Player Card用です。" />
+    <meta property="og:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
+    <meta property="og:type" content="video.other" />
+    <meta property="og:video" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
+    <meta property="og:video:width" content="480" />
+    <meta property="og:video:height" content="360" />
+    <meta property="og:video:type" content="video/mp4" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ツイッタービデオカード作成ボット</title>
     <style>
@@ -105,8 +117,8 @@
             <h2>ボットの魅力</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
                 <div class="card">
-                    <h3>サンプル動画活用</h3>
-                    <p>サンプル動画を活用し、自分のアフィリエイトIDを通じて直接動画を販売可能。</p>
+                    <h3>動画活用</h3>
+                    <p>動画を活用し、自分のアフィリエイトIDを通じて直接動画を販売可能。</p>
                 </div>
                 <div class="card">
                     <h3>収益化サポート</h3>
