--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <!-- Twitter Player Card -->
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:player" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
+    <meta name="twitter:player" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4?ex=676433ff&is=6762e27f&hm=843f2ca9bc8cfdbfe8784cd63120be5203ccf800f7e62390561f6ac041c70428&" />
     <meta name="twitter:player:width" content="480" />
     <meta name="twitter:player:height" content="360" />
     <meta name="twitter:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
-    <meta name="twitter:player:stream" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
+    <meta name="twitter:player:stream" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4?ex=676433ff&is=6762e27f&hm=843f2ca9bc8cfdbfe8784cd63120be5203ccf800f7e62390561f6ac041c70428&" />
     <meta name="twitter:player:stream:content_type" content="video/mp4" />
     <meta name="twitter:title" content="動画プレイヤー" />
     <meta name="twitter:description" content="このページはTwitter Player Card用です。" />
@@ -20,7 +20,7 @@
     <meta property="og:description" content="このページはTwitter Player Card用です。" />
     <meta property="og:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
     <meta property="og:type" content="video.other" />
-    <meta property="og:video" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4" />
+    <meta property="og:video" content="https://cdn.discordapp.com/attachments/1318759267003666482/1318954925262372874/output_video.mp4?ex=676433ff&is=6762e27f&hm=843f2ca9bc8cfdbfe8784cd63120be5203ccf800f7e62390561f6ac041c70428&" />
     <meta property="og:video:width" content="480" />
     <meta property="og:video:height" content="360" />
     <meta property="og:video:type" content="video/mp4" />
