--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <!-- Twitter Player Card -->
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:player" content="https://s925s.github.io/twittervideo/output_video.mp4" />
+    <meta name="twitter:player" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
     <meta name="twitter:player:width" content="480" />
     <meta name="twitter:player:height" content="360" />
     <meta name="twitter:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
-    <meta name="twitter:player:stream" content="https://s925s.github.io/twittervideo/output_video.mp4" />
+    <meta name="twitter:player:stream" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
     <meta name="twitter:player:stream:content_type" content="video/mp4" />
     <meta name="twitter:title" content="動画プレイヤー" />
     <meta name="twitter:description" content="このページはTwitter Player Card用です。" />
@@ -20,7 +20,7 @@
     <meta property="og:description" content="このページはTwitter Player Card用です。" />
     <meta property="og:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
     <meta property="og:type" content="video.other" />
-    <meta property="og:video" content="https://s925s.github.io/twittervideo/output_video.mp4" />
+    <meta property="og:video" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
     <meta property="og:video:width" content="480" />
     <meta property="og:video:height" content="360" />
     <meta property="og:video:type" content="video/mp4" />
