--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Twitter Player Card -->
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:player" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
-    <meta name="twitter:player:width" content="480" />
-    <meta name="twitter:player:height" content="360" />
+    <meta name="twitter:site" content="@S925nipa" />
+    <meta name="twitter:title" content="動画" />
+    <meta name="twitter:description" content="Twitter Player Cardの動画です。" />
     <meta name="twitter:image" content="https://pbs.twimg.com/ext_tw_video_thumb/1376508526575636490/pu/img/3Tn_D-L5M3h1C1HY.jpg" />
+    <meta name="twitter:player" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
+    <meta name="twitter:player:width" content="852" />
+    <meta name="twitter:player:height" content="480" />
     <meta name="twitter:player:stream" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
     <meta name="twitter:player:stream:content_type" content="video/mp4" />
-    <meta name="twitter:title" content="動画プレイヤー" />
-    <meta name="twitter:description" content="このページはTwitter Player Card用です。" />
-
-    <title>動画プレイヤー</title>
+    
 </head>
 
 
