--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta name="twitter:card" content="player" />
-    <meta name="twitter:site" content="@S925nipa" />
-    <meta name="twitter:title" content="動画" />
-    <meta name="twitter:description" content="Twitter Player Cardの動画です。" />
-    <meta name="twitter:player" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
-    <meta name="twitter:player:width" content="852" />
-    <meta name="twitter:player:height" content="480" />
-    <meta name="twitter:player:stream" content="https://video.twimg.com/ext_tw_video/1869404906177839104/pu/vid/avc1/852x480/a46hNtECfD39Bs46.mp4" />
-    <meta name="twitter:player:stream:content_type" content="video/mp4" />
-    
-</head>
-
-
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="player">
+    <meta name="twitter:title" content="sd">
+    <meta name="twitter:player" content="https://s925s.github.io/twittervideo/video.mp4">
+    <meta name="twitter:player:width" content="640">
+    <meta name="twitter:player:height" content="360">
     <title>ツイッタービデオカード作成ボット</title>
     <style>
         body {
@@ -106,8 +99,8 @@
             <h2>ボットの魅力</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
                 <div class="card">
-                    <h3>動画活用</h3>
-                    <p>動画を活用し、自分のアフィリエイトIDを通じて直接動画を販売可能。</p>
+                    <h3>サンプル動画活用</h3>
+                    <p>サンプル動画を活用し、自分のアフィリエイトIDを通じて直接動画を販売可能。</p>
                 </div>
                 <div class="card">
                     <h3>収益化サポート</h3>
@@ -156,7 +149,7 @@
 
     <footer style="background-color: #f8f9fa; text-align: center; padding: 20px 0; margin-top: 40px;">
         <div class="container">
-            <p>&copy; 2024 ツイッタービデオカードボット. All rights reserved.</p>
+            <p>&copy; 2023 ツイッタービデオカードボット. All rights reserved.</p>
         </div>
     </footer>
 </body>
