--- a/index.html
+++ b/index.html
@@ -1,157 +1,22 @@
+html  
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>リダイレクトページ</title>
+
+    <!-- Twitterカード -->
     <meta name="twitter:card" content="player">
     <meta name="twitter:title" content="sd">
-    <meta name="twitter:player" content="https://s925s.github.io/twittervideo/video.mp4">
+    <meta name="twitter:player" content="https://cc3001.dmm.co.jp/litevideo/freepv/s/ssi/ssis00778/ssis00778mhb.mp4">
     <meta name="twitter:player:width" content="640">
     <meta name="twitter:player:height" content="360">
-    <title>ツイッタービデオカード作成ボット</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to bottom, #f0f0f0, #e0e0e0);
-        }
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        header {
-            background-color: #ffffff;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 0;
-        }
-        nav a {
-            color: #333;
-            text-decoration: none;
-            margin-left: 20px;
-        }
-        h1, h2 {
-            text-align: center;
-        }
-        .card {
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-        .button {
-            display: inline-block;
-            background-color: #0070f3;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #0056b3;
-        }
-        @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-            }
-            nav a {
-                margin: 5px 0;
-            }
-        }
-    </style>
+
+    <!-- リダイレクト設定 -->
+    <meta http-equiv="refresh" content="3; URL=https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdigital%2Fvideoa%2F-%2Fdetail%2F%3D%2Fcid%3Dssis00778%2F%3Fdmmref%3De69c3f69-9a8f4f0a4d9f58928c89ef3b0f00aaa0%26i3_ref%3Drecommend%26i3_ord%3D3%2F&af_id=power0823-001&ch=link_tool&ch_id=link">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <a href="#" style="font-weight: bold;">ツイッタービデオカードボット</a>
-            <div>
-                <a href="#features">特徴</a>
-                <a href="#pricing">料金プラン</a>
-                <a href="#contact">お問い合わせ</a>
-            </div>
-        </nav>
-    </header>
-
-    <main class="container">
-        <section style="text-align: center; margin-bottom: 40px;">
-            <h1>ツイッタービデオカード作成ボットを使いませんか！</h1>
-            <p>
-                このボットを活用すれば、選手権凸や裏垢女子で簡単に効率よく収益化が可能です。<br>
-                ツイッターを活用したマーケティングやアフィリエイトに力を入れたい方に最適です！
-            </p>
-        </section>
-
-        <section id="features">
-            <h2>ボットの魅力</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
-                <div class="card">
-                    <h3>サンプル動画活用</h3>
-                    <p>サンプル動画を活用し、自分のアフィリエイトIDを通じて直接動画を販売可能。</p>
-                </div>
-                <div class="card">
-                    <h3>収益化サポート</h3>
-                    <p>あなたの収益化を強力にサポートします！</p>
-                </div>
-                <div class="card">
-                    <h3>効率的な運用</h3>
-                    <p>「少ない手間で収益を最大化したい」「もっと効率的にツイッターを活用したい」そんなあなたにピッタリのツールです。</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="pricing" style="margin-top: 40px;">
-            <h2>料金プラン</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
-                <div class="card">
-                    <h3>2ページプラン</h3>
-                    <p><strong>たったの3,000円！</strong></p>
-                    <p>裏アカ女子など、少量運用におすすめ</p>
-                </div>
-                <div class="card">
-                    <h3>作り放題プラン</h3>
-                    <p><strong>月額10,000円</strong></p>
-                    <p>DMM限定で、大量運用に最適</p>
-                </div>
-            </div>
-        </section>
-
-        <section style="text-align: center; margin-top: 40px;">
-            <h2>ご検討ください</h2>
-            <p>
-                ぜひこの機会に導入をご検討ください！<br>
-                詳細情報や購入については、以下のお問い合わせ先までご連絡ください。
-            </p>
-        </section>
-
-        <section id="contact" style="text-align: center; margin-top: 40px;">
-            <h2>お問い合わせ</h2>
-            <p>
-                <a href="https://discord.com/invite/9JAKcWzG7X" class="button" target="_blank" rel="noopener noreferrer">Discord</a>
-                <a href="https://x.com/S925nipa" class="button" style="margin-left: 10px;" target="_blank" rel="noopener noreferrer">X（旧Twitter）</a>
-            </p>
-            <p>お気軽にご連絡ください！</p>
-        </section>
-    </main>
-
-    <footer style="background-color: #f8f9fa; text-align: center; padding: 20px 0; margin-top: 40px;">
-        <div class="container">
-            <p>&copy; 2023 ツイッタービデオカードボット. All rights reserved.</p>
-        </div>
-    </footer>
+    <p>リダイレクト中です。お待ちください...</p>
+    <a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdigital%2Fvideoa%2F-%2Fdetail%2F%3D%2Fcid%3Dssis00778%2F%3Fdmmref%3De69c3f69-9a8f4f0a4d9f58928c89ef3b0f00aaa0%26i3_ref%3Drecommend%26i3_ord%3D3%2F&af_id=power0823-001&ch=link_tool&ch_id=link">こちらをクリック</a>
 </body>
 </html>
-
